Adds `RejectionDetails` support to `LeadLender` entity, replaces `remarks` field; updates DTOs, services, and Liquibase changelog accordingly.